Add "human-readable" translations of db fields for Grant table.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,3 +3,10 @@
 
 en:
   hello: "Hello world"
+  activerecord:
+      attributes:
+        grant:
+            beg_year: Beginning Year
+            end_year: "End Year"
+            org: "Organization"
+            
