Modify form/displays to support entering/displaying related Grant. Human-readabled fields.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -9,4 +9,10 @@ en:
             beg_year: Beginning Year
             end_year: "End Year"
             project_id: "Project"
+        batch:
+            name_short: "Short Name"
+            date_beg_qc: "Date QC Began"
+            date_ucb_ucr: "Date sent UCB -> UCR"
+            date_ucr_lc: "Date sent UCR -> LC"
+            lc_approve: "LC Approved?"
             
